# Nl2SQL-Backend

./: .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_performance_indexes.py  0003_filter_column_indexes.py  0004_schema_catalog.py  0005_refresh_tokens.py  0006_notification_digest.py
deploy/nginx/: nl2sql.conf
deploy/systemd/: nl2sql.service
src/: __init__.py
src/nl_to_sql/: __init__.py
src/nl_to_sql/api/: app.py  dependencies.py
src/nl_to_sql/api/middleware/: error_handler.py  logging_middleware.py  rate_limiter.py
src/nl_to_sql/api/routes/: account.py  analytics.py  auth.py  auth_sessions.py  config.py  data.py  favorited_tables.py  feedback.py  fine_tuning.py  glossary.py  health.py  history.py  instructions.py  notification_prefs.py  onboarding.py  profile.py  query.py  query_templates.py  saved_queries.py  schema.py  sessions.py  training.py  tutorial.py  usage.py  user_settings.py
src/nl_to_sql/config/: container.py  settings.py
src/nl_to_sql/config/factories/: __init__.py  cache_factory.py  llm_factory.py  rag_factory.py
src/nl_to_sql/core/: exceptions.py
src/nl_to_sql/core/interfaces/: __init__.py  i_cache.py  i_embedder.py  i_llm_provider.py  i_sql_validator.py  i_vector_store.py
src/nl_to_sql/core/models/: __init__.py  auth.py  config.py  profile.py  query.py  schema.py  sql_result.py
src/nl_to_sql/infrastructure/: bm25_store.py  example_store.py
src/nl_to_sql/infrastructure/cache/: __init__.py  cache_metrics.py  in_memory_cache.py  redis_cache.py  semantic_cache.py
src/nl_to_sql/infrastructure/database/: __init__.py  models.py  schema_sync.py  sqlalchemy_client.py  url_utils.py
src/nl_to_sql/infrastructure/embeddings/: __init__.py  gemini_embedder.py  huggingface_embedder.py
src/nl_to_sql/infrastructure/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py
src/nl_to_sql/infrastructure/observability/: langfuse_client.py  tracing.py
src/nl_to_sql/infrastructure/vector_store/: __init__.py  chroma_store.py  faiss_store.py  qdrant_store.py
src/nl_to_sql/pipelines/: __init__.py
src/nl_to_sql/preprocessing/: __init__.py
src/nl_to_sql/rag/: __init__.py
src/nl_to_sql/rag/ingestion/: __init__.py  bm25_indexer.py  chunker.py  doc_builder.py  embedder.py  pipeline.py  schema_loader.py  table_describer.py  vector_writer.py
src/nl_to_sql/rag/retrieval/: __init__.py  bm25_retriever.py  context_builder.py  fk_extractor.py  query_embedder.py  reranker.py  retrieval_chain.py  table_selector.py  vector_retriever.py
src/nl_to_sql/services/: __init__.py  analytics_service.py  api_key_service.py  auth_service.py  chat_session_service.py  digest_service.py  feedback_learner.py  feedback_service.py  fine_tuning_service.py  prompt_budget.py  prompt_manager.py  query_classifier.py  query_expander.py  query_history.py  query_orchestrator.py  query_rewriter.py  question_suggestion_service.py  reranker.py  schema_catalog_service.py  schema_ingestion.py  schema_monitor.py  schema_retriever.py  sql_column_validator.py  sql_explanation_service.py  sql_format.py  sql_generator.py  sql_validator.py  table_selector.py  training_data_service.py  ttl_manager.py  user_db_service.py
src/nl_to_sql/workers/: __init__.py  digest_worker.py  purge_worker.py  retention_worker.py  scheduler.py
