[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-to-sql-rag"
version = "1.0.0"
description = "Production-grade Natural Language to SQL RAG Pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # LLM Providers
    "groq>=0.9.0",
    "openai>=1.0.0",

    # Embeddings & Vector Store
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client[fastembed]>=1.8.0",

    # BM25 Keyword Search (hybrid retrieval)
    "rank-bm25>=0.2.2",

    # SQL Parsing & Validation
    "sqlglot>=23.0.0",

    # Database (async SQLAlchemy)
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",

    # Caching
    "redis[asyncio]>=5.0.0",

    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "langfuse>=2.0.0",

    # Configuration
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Dependency Injection
    "dependency-injector>=4.41.0",

    # Logging
    "structlog>=24.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "google-auth>=2.29.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "factory-boy>=3.3.0",
]

[tool.hatch.build.targets.wheel]
# Path is relative to this pyproject.toml (i.e. the backend/ directory)
packages = ["src/nl_to_sql"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "S", "RUF"]
ignore = [
    "S101",    # assert used (tests)
    "E501",    # line too long — string literals, prompts, log messages
    "ANN401",  # Any type — needed for dynamic plugin/cache APIs
    "ANN001",  # missing arg type — incremental typing improvement
    "ANN201",  # missing public return type — incremental
    "ANN202",  # missing private return type — incremental
    "S110",    # try-except-pass — intentional silent catches
    "E402",    # module-level import not at top — deferred imports for startup speed
    "RUF001",  # ambiguous unicode char in string
    "RUF002",  # ambiguous unicode char in docstring (em dashes)
    "S105",    # hardcoded password string — false positive on config key names
    "S106",    # hardcoded password func arg — false positive
    "N814",    # camelcase imported as constant
]

[tool.ruff.lint.isort]
known-first-party = ["nl_to_sql"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"**/api/routes/**" = ["B008"]
"**/api/dependencies.py" = ["B008"]
"**/api/middleware/**" = ["B008"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "groq.*", "dependency_injector.*", "sqlglot.*", "slowapi.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/nl_to_sql",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]
